fixed layout bug in skills section

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -309,7 +309,8 @@ ul#nav li.current a { color: #00CCCC }
    letter-spacing: 2px;
 	font-weight: normal;
    position: relative;
-	top: -36px;
+	top: -42px;
+   margin-bottom: 10px;
 }
 .bar-expand {
    position: absolute;
